[package]
name = "asciidraw"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
clap = "3.0.0-beta.2"
thiserror = "1.0"
regex = "1"
itertools = "0.9"
rayon = "1.5"